# austin-tracker

./: .env.example  .gitignore  README.md  formatter.py  main.py  map.py  nixpacks.toml  pyproject.toml  railway.json  scraper.py  slack-manifest.yaml  slack.py  test_main.py
.githooks/: pre-commit
slack/: README.md
src/: formatter.py  main.py  map.py  markdown_to_richtext.py  scraper.py  slack.py  types.py
tests/: test_formatter.py  test_integration.py  test_main.py  test_scraper.py  test_slack.py
tests/fixtures/: listing.html  post_big_bad_wolf.html  post_raining_magic.html  post_sanbu.html
