[project]
name = "austin-tracker"
version = "0.1.0"
description = "Weekly PCT progress bot for Austin's hike"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11.0",
    "ty>=0.0.29",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

